# Product-Bundler

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shopify.app.toml
apps/admin/: drizzle.config.ts  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
apps/admin/app/: crypto.server.ts  db.server.ts  entry.server.tsx  kv.server.ts  root.tsx  session-storage.server.ts  shopify.server.ts
apps/admin/drizzle/: schema.ts
apps/admin/functions/: [[path]].ts
apps/admin/public/: widget.css  widget.js
apps/admin/test/: analytics-attribution.test.ts  analytics-dashboard-query.test.ts  analytics-events-write.test.ts  analytics-revenue-rollup.test.ts  env.d.ts  (+31 more)
apps/widget-src/: package.json  tsup.config.ts  vitest.config.ts
docs/listing/: 2026-05-08-app-store-listing-copy.md
extensions/cart-transform-function/: Cargo.toml  shopify.extension.toml
extensions/cart-transform-function/src/: main.rs  run.graphql  run.rs  transform.rs
extensions/cart-transform-function/tests/: transform_test.rs
extensions/discount-function/: Cargo.toml  package.json  shopify.extension.toml
extensions/discount-function/src/: config.rs  discount.rs  lib.rs  main.rs  matcher.rs  run.graphql  run.rs
extensions/discount-function/tests/: config_test.rs  discount_test.rs  matcher_test.rs
extensions/shipping-discount-function/: Cargo.toml  package.json  shopify.extension.toml
extensions/theme-app-extension/: package.json  shopify.extension.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
shared/: package.json
(+310 files in other folders)
