[package]
name = "cart-transform-function"
version = "1.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cart-transform-function"
path = "src/main.rs"

[dependencies]
shopify_function = "2.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = 'z'
